# logitech-led-control

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/: enable-automerge.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/: help.rs  main.rs  profile.rs
src/commands/: list.rs  mod.rs  open.rs
src/keyboard/: README.md  api.rs  colors.rs  effects.rs  mod.rs  model.rs  packet.rs  parser.rs  spec.rs  types.rs
src/keyboard/device/: common.rs  hid.rs  libusb.rs  mod.rs
