[package]
name = "logi-led"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
hidapi = "2.6.3"
num_enum = "0.7.4"
phf = { version = "0.12.1", features = ["macros"] }
strum = "0.27.1"
strum_macros = "0.27.1"
rusb = { version = "0.9.4", optional = true }

[features]
default = []
libusb = ["rusb"]
