[package]
name = "logi-led"
version = "0.1.0"
edition = "2024"
description = "Command-line utility for controlling lighting on supported Logitech keyboards"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/peppapig450/logitech-led-control"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
hidapi = "2.6.3"
num_enum = "0.7.4"
phf = { version = "0.12.1", features = ["macros"] }
strum = "0.27.1"
strum_macros = "0.27.1"
rusb = { version = "0.9.4", optional = true }
clap_complete = "4.5.54"
serde = { version = "1", features = ["derive"] }
toml = "0.8"


[features]
default = []
libusb = ["rusb"]
