[package]
name = "logi-led"
version = "0.1.0"
edition = "2024"
description = "Command-line utility for controlling lighting on supported Logitech keyboards"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/peppapig450/logitech-led-control"

[dependencies]
anyhow = "1.0.99"
bitflags = "2.10.0"
clap = { version = "4.5.57", features = ["derive", "env"] }
hidapi = "2.6.4"
num_enum = "0.7.5"
phf = { version = "0.13.1", features = ["macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rusb = { version = "0.9.4", optional = true }
clap_complete = "4.5.66"
serde = { version = "1", features = ["derive"] }
toml = "0.9"


[features]
default = []
libusb = ["rusb"]
